== 0.9.0 / 2010-04-03
  * Minor Enhancements
    * Allow kqueue for OpenBSD and NetBSD
    * Add err_log and err_log_cmd
    * Add God.terminate_timeout option
    * Respect --log-level in Syslog
    * Add configuration parameters to set permissions on socket
    * Add Scout contact
    * Add Prowl contact
  * Bug Fixes
    * Fix interleaved log messages
  * Experimental
    * Ruby 1.9 support

== 0.8.0 / 2009-11-30
  * Minor Enhancements
    * Rubygems decontamination
    * Use Monitor instead of Mutex to provide ability to wait with a timeout
    * Only generate log messages when they're being used
    * Remove usage of Thread.critical in DriverEventQueue
    * Update to work with latest bleak-house
    * Cache some frequent lookups to reduce object creation
    * Changing the @io.print call in SimpleLogger to not concatenate
      the formatted results before printing
  * Bug fixes
    * Make sure we don't leak hash slots when processes die
    * Make sure the driver is shutdown on Task#unregister!
    * Fix memory leak when issuing "god load" successfully
    * Fix defunct process

== NOTE
  At this point I will stop giving credit in the history. Look at the author
  and committer in the commit for that info.

== 0.7.22 / 2009-10-29
  * Minor Enhancements
    * Save ARGV so we can get access to it later if we want [github.com/eric]

== 0.7.21 / 2009-10-29
  * Minor Enhancements
    * Cache some frequent lookups to reduce object creation [github.com/eric]
    * Try to make SimpleLogger less leaky [github.com/eric]

== 0.7.20 / 2009-09-24
  * Minor Enhancements
    * Rewrite `god status` command to be not as horrible. Add ability to get
      status for individual tasks.

== 0.7.19 / 2009-09-21
  * Minor Enhancements
    * Teach `god status` to take a task name as a param and return
      an exit code of 0 if all watches are up or a non-zero exit code
      (equal to the number of non-up watches) if they are not.

== 0.7.18 / 2009-09-09
  * Minor Enhancements